--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 <body>
 
     <div id="root">
-
+        <main class="d-flex flex-row align-items-center justify-content-center">
+            
+        </main>
+          
     </div>    
 
 </body>
