--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                             <p><strong>Nome Utente</strong></p>
                         </div>
                     <div class="d-flex align-items-center justify-content-end">
-                        <i class="p-2 fa-solid fa-circle-notch" style="color: #b1b1b1;"></i>
-                        <i class="p-2 fa-solid fa-message" style="color: #b1b1b1;"></i>
-                        <i class="p-2 fa-solid fa-ellipsis-vertical" style="color: #b1b1b1;"></i>
+                        <i class="p-2 fa-solid fa-circle-notch fa-lg" style="color: #b1b1b1;"></i>
+                        <i class="p-2 fa-solid fa-message fa-lg" style="color: #b1b1b1;"></i>
+                        <i class="p-2 fa-solid fa-ellipsis-vertical fa-lg" style="color: #b1b1b1;"></i>
                     </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="serch d-flex align-items-center">
                    <div class="input-group">
-                        <span class="input-group-text"><i class="fa-solid fa-magnifying-glass" style="color: #b1b1b1;"></i></span>
+                        <span class="input-group-text"><i class="fa-solid fa-magnifying-glass fa-lg" style="color: #b1b1b1;"></i></span>
                         <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat">
                       </div>
                 </div>
@@ -85,13 +85,37 @@
               <!--right part of main -->
               <div class="right">
                 <div class="message-contact">
-                  
+                    <div class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center">
+                            <img class="avatar-img" src="img/avatar_1.jpg" alt="Michele">
+                            <div>
+                                <p><strong>Michele</strong></p>
+                                <p>Ultimo acesso oggi alle</p>
+                            </div>
+                        </div>
+                    <div class="d-flex align-items-center justify-content-end">
+                        <i class="p-2 fa-solid fa-magnifying-glass fa-lg" style="color: #b1b1b1;"></i>
+                        <i class="p-2 fa-solid fa-paperclip fa-lg" style="color: #b1b1b1;"></i>
+                        <i class="p-2 fa-solid fa-ellipsis-vertical fa-lg" style="color: #b1b1b1;"></i>
+                    </div>
+                </div>
                 </div>
                 <div class="message">
 
                 </div>
-                <div class="typing">
-
+                <div class="typing d-flex justify-content-around align-items-center">
+                    <div>
+                        <i class="fa-regular fa-face-smile fa-xl" style="color: #6b7376;"></i>
+                    </div>
+                    <div>
+                        <div class="input-group m-3">
+                            <input type="text" class="input" placeholder="Scrivi un messaggio">
+                          </div>
+                          
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-microphone fa-xl" style="color: #6b7376;"></i>
+                    </div>
                 </div>
               </div>
             </main>
