modify left main

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="icon">
                         <i class="fa-solid fa-bell-slash" id="icon" style="color: #8edafc;"></i>
                     </div>
-                    <p><strong>Ricevi notifiche di nuovi messaggi</strong><br>
+                    <p class="p-2 p-size"><strong>Ricevi notifiche di nuovi messaggi</strong><br>
                         <span class="underline">Attiva notifiche desktop</span>
                     </p>
                   </div>
