added delete message function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
     crossorigin="anonymous">
+    <!-- Bootstrap  javascript-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 
 
   <!-- Fontawesome -->
@@ -107,6 +110,14 @@
                         <li v-for="message in currentContact.messages" :class="{sent: message.status === 'sent', received: message.status === 'received'}">
                             <p class="mb-0">{{message.text}}</p>
                             <span class="d-block text-end date-message">{{message.date}}</span>
+                            <div class="dropdown d-flex justify-content-end">
+                                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                </button>
+                                <ul class="dropdown-menu">
+                                  <li><a class="dropdown-item" href="#">Message info</a></li>
+                                  <li><a class="dropdown-item" href="#" @click="removeTask(message.id)">Delete message</a></li>
+                                </ul>
+                              </div>
                         </li>
                     </ul>
                 </div>
